[gd_scene load_steps=3 format=3 uid="uid://ciw2xi81j8bff"]

[ext_resource type="Script" path="res://send_text_config.gd" id="1_v5trx"]

[sub_resource type="LabelSettings" id="LabelSettings_6qyb2"]
font_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5trx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "User"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="InputEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Hello how are you."

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Model"

[node name="FinishedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyb2")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResponseEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 280)
layout_mode = 2
size_flags_horizontal = 3
editable = false
wrap_mode = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Stop Sequence"

[node name="StopSequenceEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Tempature"

[node name="TempatureSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.4

[node name="TempatureLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "0.4
"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Output Length"

[node name="OutputLengthSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
min_value = 1.0
max_value = 4096.0
value = 4096.0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Top K"

[node name="TopKSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
min_value = 1.0
value = 3.0

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Top P"

[node name="TopPSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="TopPLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "1
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/TempatureSlider" to="." method="_on_tempature_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/TopPSlider" to="." method="_on_top_p_slider_value_changed"]
